# internal/api/v1/api.go
@@ -64,6 +64,7 @@ type IAppService interface {
 	AddNewTask(*ds.CreateTaskRequest) *ds.CreateTaskResponse
 	GetTasks(*ds.GetTasksRequest) *ds.GetTasksResponse
 	UpdateTask(*ds.UpdateTaskRequest) *ds.UpdateTaskResponse
+	GetTaskHistory(*ds.GetTaskHistoryRequest) *ds.GetTaskHistoryResponse
 }
 
 type IAuthService interface {
