# internal/api/v1/tasks.go
@@ -9,8 +9,9 @@ import (
 )
 
 const (
-	tasksPrefix      = apiPrefix + "/tasks"
-	updateTaskPrefix = tasksPrefix + "/{id}"
+	tasksPrefix    = apiPrefix + "/tasks"
+	taskByIdPrefix = tasksPrefix + "/{id}"
+	taskHistory    = taskByIdPrefix + "/history"
 )
 
 func (a *API) setupTasksHandlers() {
@@ -18,8 +19,10 @@ func (a *API) setupTasksHandlers() {
 		jwtBasedMiddleware(a, http.HandlerFunc(a.CreateTask)))
 	a.router.Handle(pattern(http.MethodGet, tasksPrefix),
 		jwtBasedMiddleware(a, http.HandlerFunc(a.GetTasks)))
-	a.router.Handle(pattern(http.MethodPut, updateTaskPrefix),
+	a.router.Handle(pattern(http.MethodPut, taskByIdPrefix),
 		jwtBasedMiddleware(a, http.HandlerFunc(a.UpdateTask)))
+	a.router.Handle(pattern(http.MethodGet, taskHistory),
+		jwtBasedMiddleware(a, http.HandlerFunc(a.GetTaskHistory)))
 }
 
 // CreateTask create new task
@@ -110,6 +113,43 @@ func (a *API) UpdateTask(w http.ResponseWriter, r *http.Request) {
 
 			v.TaskId = id
 			return extractJsonBody(r, v)
+		},
+		httpResponse: &w,
+		httpRequest:  r,
+		api:          a,
+	})
+}
+
+// GetTaskHistory get tasks history
+// @Summary      get tasks history
+// @Description  get tasks history.
+// @Tags         Tasks
+// @Security     BearerAuth
+// @Accept       json
+// @Produce      json
+// @Param        id             path      integer                   true  "task_id"     example(1)
+// @Param        avoid_cache    query     string                    false "avoid_cache" example(true)
+// @Success      200            {object}  ds.GetTaskHistoryResponse
+// @Failure      400            {object}  ds.Status
+// @Failure      500            {object}  ds.Status
+// @Router       /tasks/{id}/history  [get]
+func (a *API) GetTaskHistory(w http.ResponseWriter, r *http.Request) {
+	Exec(ExecArgs[ds.GetTaskHistoryRequest, ds.GetTaskHistoryResponse]{
+		serviceFunc:    a.appService.GetTaskHistory,
+		responseWriter: writeJsonResponse[*ds.GetTaskHistoryResponse],
+		requestExtractor: func(r *http.Request, v *ds.GetTaskHistoryRequest) error {
+			idRaw := r.PathValue("id")
+			if idRaw == "" {
+				return fmt.Errorf("task id was not provided")
+			}
+
+			id, err := strconv.ParseInt(idRaw, 10, 64)
+			if err != nil {
+				return err
+			}
+
+			v.TaskId = id
+			return extractSchemaQuery(r, v)
 		},
 		httpResponse: &w,
 		httpRequest:  r,
