# internal/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Service for managing teams and tasks",
-        "title": "Team Task Managere",
+        "title": "Team Task Manager",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Maksim",
@@ -343,6 +343,63 @@
                 }
             }
         },
+        "/tasks/{id}/history": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "get tasks history.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "get tasks history",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "example": 1,
+                        "description": "task_id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "true",
+                        "description": "avoid_cache",
+                        "name": "avoid_cache",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/datastruct.GetTaskHistoryResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/datastruct.Status"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/datastruct.Status"
+                        }
+                    }
+                }
+            }
+        },
         "/teams": {
             "get": {
                 "security": [
@@ -499,8 +556,7 @@
                 "description",
                 "status",
                 "subject",
-                "team_id",
-                "version"
+                "team_id"
             ],
             "properties": {
                 "assignee_login": {
@@ -520,10 +576,6 @@
                     "example": "service endpoint"
                 },
                 "team_id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "version": {
                     "type": "integer",
                     "example": 1
                 }
@@ -561,6 +613,25 @@
                 "status": {
                     "type": "string",
                     "example": "status message"
+                }
+            }
+        },
+        "datastruct.GetTaskHistoryResponse": {
+            "type": "object",
+            "properties": {
+                "cached": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "status": {
+                    "type": "string",
+                    "example": "status message"
+                },
+                "taskHistory": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/datastruct.TaskOutput"
+                    }
                 }
             }
         },
@@ -751,7 +822,8 @@
                     "example": "core"
                 },
                 "team_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
